[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/PlayerExterior.gd" type="Script" id=1]
[ext_resource path="res://Animation/State_Visible.tres" type="Animation" id=2]
[ext_resource path="res://Sprites/Space Cadet Sprite Sheet.png" type="Texture" id=3]
[ext_resource path="res://Animation/State_Rest.tres" type="Animation" id=4]
[ext_resource path="res://Animation/State_Damaged.tres" type="Animation" id=5]
[ext_resource path="res://SFX/Oof_Damage_Sound.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 16, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Damage"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 24, 24, 25 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 1.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Teleport"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 38, 39 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 24.5989, 29.6712 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -55 )
z_index = -4
current = true
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="PlayerStates" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/Damage = SubResource( 2 )
anims/Death = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Run = SubResource( 5 )
anims/Teleport = SubResource( 6 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 1.78584, -46.233 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
hframes = 8
vframes = 5
frame = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.79596, -40.3248 )
shape = SubResource( 7 )

[node name="TurnAxis" type="Position2D" parent="."]
position = Vector2( -2.38076e-07, -42.5825 )
rotation = -1.90415

[node name="CastPoint" type="Position2D" parent="TurnAxis"]
position = Vector2( 60, 0 )

[node name="PlayerEffects" type="AnimationPlayer" parent="."]
anims/State_Damaged = ExtResource( 5 )
anims/State_Rest = ExtResource( 4 )
anims/State_Visible = ExtResource( 2 )

[node name="Oof" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
